# llm-zoomcamp-2026-code

./: .gitignore  homework.ipynb  homework2.ipynb  ingest.py  notebook.ipynb  pyproject.toml  rag_helper.py
