[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
]
